--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.1",
-    "react-tabl": "^0.8.0",
     "react-table": "^7.8.0",
     "react-table-ui": "^0.1.6",
     "typescript": "5.0.4",
-    "url-join": "^5.0.0"
+    "url-join": "^5.0.0",
+    "wagmi": "^1.3.8"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
