--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.1",
+    "react-select": "^5.6.1",
     "react-table": "^7.8.0",
     "react-table-ui": "^0.1.6",
     "typescript": "5.0.4",
