--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "ethers": "^6.6.4",
     "framer-motion": "^10.12.16",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
@@ -30,8 +31,10 @@
     "react-select": "^5.6.1",
     "react-table": "^7.8.0",
     "react-table-ui": "^0.1.6",
+    "react-toastify": "^9.1.3",
     "typescript": "5.0.4",
     "url-join": "^5.0.0",
+    "viem": "^1.3.0",
     "wagmi": "^1.3.8"
   },
   "devDependencies": {
