--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "ethers": "^6.6.4",
+    "firebase": "^10.1.0",
     "framer-motion": "^10.12.16",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
