update firebase config

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 NEXT_PUBLIC_ENDPOINT = http://192.168.0.172:8030/api
-NEXT_PUBLIC_FIREBASE_API_KEY = AIzaSyAsACFBh3_FCOkPT91AJCDY5t89Zyr94hE
-NEXT_PUBLIC_FIREBASE_AUTHDOMAIN = testfortuna-74ddc.firebaseapp.com
-NEXT_PUBLIC_PROJECTID = testfortuna-74ddc
-NEXT_PUBLIC_STORAGEBUCKET = testfortuna-74ddc.appspot.com
-NEXT_PUBLIC_MESSAGINGSENDERID = 417229346379
-NEXT_PUBLIC_APPID = 1:417229346379:web:6d1057074e30e70fec1fce
-NEXT_PUBLIC_MEASUREMENTID = G-LNWTZ98CVE
+NEXT_PUBLIC_FIREBASE_API_KEY = AIzaSyC2oc_K1r-GlAtWJAUn5A2KwUNeU-85KVo
+NEXT_PUBLIC_FIREBASE_AUTHDOMAIN = fortuna-approve.firebaseapp.com
+NEXT_PUBLIC_PROJECTID = fortuna-approve
+NEXT_PUBLIC_STORAGEBUCKET = fortuna-approve.appspot.com
+NEXT_PUBLIC_MESSAGINGSENDERID = 443186911909
+NEXT_PUBLIC_APPID = 1:443186911909:web:c0784c196972bab6464b4c
+NEXT_PUBLIC_MEASUREMENTID = 
 
